test/parser/template/028.stderr
At: "028.hac":3:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(null) 
#STATE#	keyword: template [3:1..8]
#STATE#	list<(template-formal-decl)>: (template-formal-decl) ... [3:10..18]
#STATE#	< [3:20]
#STATE#	> [3:21]
in state #STATE#, possible rules are:
	template_formal_decl_nodefault_list_in_angles : '<' . template_formal_decl_nodefault_list '>'  (#RULE#)
acceptable tokens are: 
	PINT_TYPE (shift)
	PBOOL_TYPE (shift)
	PREAL_TYPE (shift)
