test/parser/template/028.hac
// "028.hac" should fail: no empty template param lists

template <pbool A> <>
defproc foo() { }

